@@ -50,30 +50,24 @@ class FSpotPhotoList(PhotoList):
 
     def get_photo(self, cb):
         rate = self.rate_list.get_random_weight()
-        columns = 'base_uri, filename, P.id, default_version_id' \
-            if self.db.is_new else 'uri'
+        columns = 'base_uri, filename, P.id, default_version_id'
         sql = self.sql.get_statement(columns, rate.name)
         sql += ' ORDER BY random() LIMIT 1;'
 
-        if self.db.is_new:
-            photo = self.db.fetchall(sql)
-            if not photo: return False
-            base_url, filename, id, version = photo[0]
-            base_url =  base_url.rstrip('/') + '/'
+        photo = self.db.fetchall(sql)
+        if not photo: return False
+        base_url, filename, id, version = photo[0]
+        base_url =  base_url.rstrip('/') + '/'
 
-            if version != 1:
-                sql = ("SELECT filename FROM photo_versions WHERE photo_id=%s "
-                       "AND version_id=(SELECT default_version_id "
-                       "FROM photos WHERE id=%s)") % (id, id)
-                filename = self.db.fetchone(sql)
+        if version != 1:
+            sql = ("SELECT filename FROM photo_versions WHERE photo_id=%s "
+                   "AND version_id=(SELECT default_version_id "
+                   "FROM photos WHERE id=%s)") % (id, id)
+            filename = self.db.fetchone(sql)
 
-            filename = urllib.unquote(filename).encode(
-                'raw_unicode_escape').decode('utf8')
-            url = base_url + filename
-
-        else: # for ver.0.5
-            url = ''.join(self.db.fetchall(sql)[0])
-            filename = url[ url.rfind('/') + 1: ]
+        filename = urllib.unquote(filename).encode(
+            'raw_unicode_escape').decode('utf8')
+        url = base_url + filename
 
         data = { 'url' : url,
                  'rate' : rate.name,
