@@ -1,5 +1,6 @@
 2010-10-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
+	* fspot/__init__.py, sqldb.py: Dropped support for F-Spot 0.5.
 	* flickr/__init__.py, picasa.py: Dropped depends on simplejson.
 	  gphotoframe requires python 2.6.
 
